--- a/Caddyfile
+++ b/Caddyfile
@@ -1,31 +1,24 @@
 {
-    admin off
-    persist_config off
-    auto_https off
-    log {
-        format json
-    }
-    servers {
-        trusted_proxies static private_ranges
-    }
+  admin off
+  persist_config off
+  auto_https off
+  log {
+    format json
+  }
+  servers {
+    trusted_proxies static private_ranges
+  }
 }
 
 :{$PORT} {
-    log {
-        format json
-    }
+  log {
+    format json
+  }
 
-    # Handle API requests
-    handle /api/* {
-        reverse_proxy {$BACKEND_DOMAIN}:{$BACKEND_PORT} {
-            header_up Host {http.reverse_proxy.upstream.hostport}
-        }
+  # Handle frontend requests only for testing
+  handle {
+    reverse_proxy {$FRONTEND_DOMAIN}:{$FRONTEND_PORT} {
+      header_up Host {http.reverse_proxy.upstream.hostport}
     }
-
-    # Handle frontend requests
-    handle {
-        reverse_proxy {$FRONTEND_DOMAIN}:{$FRONTEND_PORT} {
-            header_up Host {http.reverse_proxy.upstream.hostport}
-        }
-    }
+  }
 }
